<?xml version="1.0"?>
<package>
  <name>fetchbot</name>
  <version>0.0.0</version>
  <description>Launch files for Fetchbot</description>
  <maintainer email="michael.mccool@intel.com">Michael McCool</maintainer>
  <license>TODO</license>
  <url type="website">http://www.intel.com/</url> 
  <author email="michael.mccool@intel.com">Michael McCool</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>fetchbot_description</build_depend>
  <run_depend>fetchbot_base</run_depend>
  <run_depend>fetchbot_description</run_depend>
  <run_depend>fetchbot_scan</run_depend>
  <run_depend>fetchbot_mapping</run_depend>
  <run_depend>fetchbot_navigation</run_depend>
</package>
