<?xml version="1.0"?>
<package>
  <name>fetchbot_base</name>
  <version>0.0.0</version>
  <description>Provide Base Control for FetchBot</description>
  <maintainer email="michael.mccool@intel.com">Michael McCool</maintainer>
  <license>TODO</license>
  <url type="website">http://intel.com</url> 
  <author email="michael.mccool@intel.com">Michael McCool</author> 
  <buildtool_depend>catkin</buildtool_depend>
</package>
