<?xml version="1.0"?>
<package>
  <name>fetchbot_navigation</name>
  <version>0.0.0</version>
  <description>Configure FetchBot for Navigation</description>
  <maintainer email="michael.mccool@intel.com">Michael McCool</maintainer>
  <license>TODO</license>
  <url type="website">http://intel.com/</url> -->
  <author email="michael.mccool@intel.com">Michael McCool</author> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>fetchbot_description</build_depend>
  <build_depend>fetchbot_mapping</build_depend>
  <build_depend>move_base</build_depend>
  <run_depend>fetchbot_description</run_depend>
  <run_depend>fetchbot_mapping</run_depend>
  <run_depend>move_base</run_depend>
</package>
