<?xml version="1.0"?>
<package>
  <name>fetchbot_scan</name>
  <version>0.0.0</version>
  <description>Convert RealSense data into LaserScan data</description>
  <maintainer email="michael.mccool@intel.com">intel</maintainer>
  <license>TODO</license>
  <url type="website">http://intel.com</url>
  <author email="michael.mccool@intel.com">Michael McCool</author>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>realsense_camera</run_depend>
  <run_depend>depthimage_to_laserscan</run_depend>
</package>
