<?xml version="1.0"?>
<package>
  <name>sawhr</name>
  <version>0.0.0</version>
  <description>Launch files for Whr</description>
  <maintainer email="michael.mccool@intel.com">Michael McCool</maintainer>
  <license>TODO</license>
  <url type="website">http://www.intel.com/</url> 
  <author email="michael.mccool@intel.com">Michael McCool</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>sawhr_description</build_depend>
  <run_depend>sawhr_base</run_depend>
  <run_depend>sawhr_description</run_depend>
  <run_depend>sawhr_scan</run_depend>
  <run_depend>sawhr_mapping</run_depend>
  <run_depend>sawhr_navigation</run_depend>
</package>
