<?xml version="1.0"?>
<package>
  <name>sawr</name>
  <version>0.0.0</version>
  <description>Launch files for Simple Autonomous Wheeled Robot (SAWR)</description>
  <maintainer email="michael.mccool@intel.com">Michael McCool</maintainer>
  <license>BSD</license>
  <url type="website">http://www.intel.com/</url> 
  <author email="michael.mccool@intel.com">Michael McCool</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>sawr_description</build_depend>
  <run_depend>sawr_base</run_depend>
  <run_depend>sawr_description</run_depend>
  <run_depend>sawr_scan</run_depend>
  <run_depend>sawr_mapping</run_depend>
  <run_depend>sawr_navigation</run_depend>
</package>
