<?xml version="1.0"?>
<package>
  <name>sawr_console</name>
  <version>0.0.0</version>
  <description>Provide web console and services for SAWR</description>
  <maintainer email="michael.mccool@intel.com">intel</maintainer>
  <license>BSD</license>
  <url type="website">http://intel.com</url>
  <author email="michael.mccool@intel.com">Michael McCool</author>
  <buildtool_depend>catkin</buildtool_depend>
</package>
