<?xml version="1.0"?>
<package>
  <name>sawr_description</name>
  <version>1.0.0</version>
  <description>URDF Description and Hardware Design for the Simple Autonomous Wheeled Robot (SAWR)</description>
  <maintainer email="michael.mccool@intel.com">Michael McCool</maintainer>
  <license>BSD-3 and CC-BY-4.0</license>
  <url type="website">https://01.org/sawr</url>
  <author email="michael.mccool@intel.com">Michael McCool</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <run_depend>urdf</run_depend>
</package>
