<?xml version="1.0"?>
<package>
  <name>sawr_master</name>
  <version>1.0.0</version>
  <description>Launch files and scripts for Simple Autonomous Wheeled Robot (SAWR)</description>
  <maintainer email="michael.mccool@intel.com">Michael McCool</maintainer>
  <license>BSD-3</license>
  <url type="website">https://01.org/sawr</url>
  <author email="michael.mccool@intel.com">Michael McCool</author>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>sawr_description</run_depend>
  <run_depend>sawr_base</run_depend>
  <run_depend>sawr_description</run_depend>
  <run_depend>sawr_scan</run_depend>
  <run_depend>sawr_mapping</run_depend>
  <run_depend>sawr_navigation</run_depend>
  <run_depend>teleop_twist_keyboard</run_depend>
</package>
