<?xml version="1.0"?>
<package>
  <name>swhr_navigation</name>
  <version>0.0.0</version>
  <description>Configure Simple Autonomous Wheeled Robot (SAWR) for Navigation</description>
  <maintainer email="michael.mccool@intel.com">Michael McCool</maintainer>
  <license>BSD</license>
  <url type="website">http://intel.com/</url> -->
  <author email="michael.mccool@intel.com">Michael McCool</author> -->
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>sawr_description</run_depend>
  <run_depend>sawr_mapping</run_depend>
  <run_depend>move_base</run_depend>
</package>
