<?xml version="1.0"?>
<package>
  <name>whr</name>
  <version>0.0.0</version>
  <description>Launch files for Whr</description>
  <maintainer email="michael.mccool@intel.com">Michael McCool</maintainer>
  <license>TODO</license>
  <url type="website">http://www.intel.com/</url> 
  <author email="michael.mccool@intel.com">Michael McCool</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>whr_description</build_depend>
  <run_depend>whr_base</run_depend>
  <run_depend>whr_description</run_depend>
  <run_depend>whr_scan</run_depend>
  <run_depend>whr_mapping</run_depend>
  <run_depend>whr_navigation</run_depend>
</package>
