<?xml version="1.0"?>
<package>
  <name>whr_base</name>
  <version>0.1.0</version>
  <description>Motor controller for Simple Autonomous Wheeled Robot</description>
  <maintainer email="michael.mccool@intel.com">Michael McCool</maintainer>
  <license>BSD</license>
  <author email="michael.mccool@intel.com">Michael McCool</author> 

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>dynamixel_sdk</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
