<?xml version="1.0"?>
<package>
  <name>whr_mapping</name>
  <version>0.0.0</version>
  <description>Set up Whr Robot for Mapping</description>
  <maintainer email="michael.mccool@intel.com">Michael McCool</maintainer>
  <license>TODO</license>
  <url type="website">http://intel.com</url> 
  <author email="michael.mccool@intel.com">Michael McCool</author> 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gmapping</build_depend>
  <run_depend>whr_description</run_depend>
  <run_depend>whr_base</run_depend>
  <run_depend>whr_scan</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>amcl</run_depend>
</package>
